--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 31 2023 04:30:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 23 2023 13:14:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629f103803132a92ed0b65bf" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -11,19 +11,16 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/arthurs-personal-website.webflow.css" rel="stylesheet" type="text/css">
-  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="5f06600c-ab3c-8e60-2c0c-2630ceffa15e"] {opacity:0;}}</style>
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="5d7cb124-5200-3361-483b-e07e5ae0a08e"] {opacity:0;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="5d7cb124-5200-3361-483b-e07e5ae0a08e"] {opacity:0;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="5d7cb124-5200-3361-483b-e07e5ae0a08e"] {opacity:0;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="5d7cb124-5200-3361-483b-e07e5ae0a08e"] {opacity:0;}}</style>
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular","Space Grotesk:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <!-- <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"> -->
-  <link rel="icon" type=" image/svg+xml" href="images/favicon.svg">
-  <link rel="icon" type=" image/png" href="images/favicon.png">
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body">
   <div data-w-id="7af02fde-3631-a900-1e61-bf5c9681d2dc" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="desktop-nav">
       <div class="horizontal-padded-container">
@@ -49,7 +46,7 @@
         <div class="nav-socials">
           <a href="mailto:ykarthurlee@gmail.com" class="social-link w-inline-block"><img src="images/ci_mail.svg" loading="lazy" alt=""></a>
           <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="social-link w-inline-block"><img src="images/cib_linkedin.svg" loading="lazy" alt=""></a>
-          <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="social-link w-inline-block"><img src="images/cib_behance.svg" loading="lazy" alt="" class="icons"></a>
+          <a href="https://medium.com/@artlee06" target="_blank" class="social-link w-inline-block"><img src="images/bi_medium.svg" loading="lazy" alt="" class="icons"></a>
           <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="social-link w-inline-block"><img src="images/cib_instagram.svg" loading="lazy" alt=""></a>
         </div>
       </div>
@@ -64,30 +61,41 @@
         </div>
       </div>
       <div class="full-screen-nav">
-        <a href="index.html" class="mobile-brand w-nav-brand"><img src="images/SmallLogo.svg" loading="lazy" alt="" class="image-3">
-          <div class="wordmark">
-            <div class="name-wordmark">Arthur Lee</div>
-            <div class="pd-wordmark">Product designer<span class="text-span-3">;</span></div>
-          </div>
-        </a>
-        <div class="mob-nav-menu-items">
-          <div class="menu-section">
-            <div class="nav-divider">
-              <div>Menu</div>
-              <div class="sideline"></div>
+        <div class="logo-menu-container">
+          <a href="index.html" class="mobile-brand w-nav-brand"><img src="images/SmallLogo.svg" loading="lazy" alt="" class="image-3">
+            <div class="wordmark">
+              <div class="name-wordmark">Arthur Lee</div>
+              <div class="pd-wordmark">Product designer<span class="text-span-3">;</span></div>
             </div>
-            <a href="index.html" class="nav-link w-nav-link">Home</a>
-            <a href="about.html" aria-current="page" class="nav-link w-nav-link w--current">About</a>
-            <a href="https://drive.google.com/file/d/1AbukktH38L2ny-aaEPySJ4uAO_CFpUIl/view?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
-          </div>
-          <div class="work-section">
-            <div class="nav-divider">
-              <div>Work</div>
-              <div class="sideline"></div>
+          </a>
+          <div class="mob-nav-menu-items">
+            <div class="menu-section">
+              <h1 class="menu-header">Menu</h1>
+              <div class="nav-divider">
+                <div>Menu</div>
+                <div class="sideline"></div>
+              </div>
+              <div class="indent-menu-container">
+                <a href="index.html" class="nav-link w-nav-link">Home</a>
+                <a href="about.html" aria-current="page" class="nav-link w-nav-link w--current">About</a>
+                <a href="https://drive.google.com/file/d/1AbukktH38L2ny-aaEPySJ4uAO_CFpUIl/view?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
+              </div>
+              <div data-w-id="e8880fb5-13c9-b4eb-2209-21344e713299" class="work-nav-link">
+                <div>Work</div><img src="images/radix-icons_triangle-down.svg" loading="lazy" alt="" class="image-19">
+              </div>
             </div>
-            <a href="work/ux.html" class="nav-link w-nav-link">UX</a>
-            <a href="work/swe.html" class="nav-link w-nav-link">SWE</a>
-            <a href="work/side-projects.html" class="nav-link w-nav-link">Visual design</a>
+            <div class="work-section">
+              <div class="nav-divider">
+                <div>Work</div>
+                <div class="sideline"></div>
+              </div>
+              <h1 class="menu-header">Work</h1>
+              <div class="indent-menu-container">
+                <a href="work/ux.html" class="nav-link w-nav-link">UX</a>
+                <a href="work/swe.html" class="nav-link w-nav-link">SWE</a>
+                <a href="work/side-projects.html" class="nav-link w-nav-link">Visual design</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="get-in-touch-nav">
@@ -95,7 +103,7 @@
           <div class="mob-nav-socials">
             <a href="mailto:ykarthurlee@gmail.com" class="socials-link-block w-inline-block"><img src="images/ci_mail.svg" loading="lazy" alt="" class="social-image-nav"></a>
             <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="socials-link-block w-inline-block"><img src="images/cib_linkedin.svg" loading="lazy" alt="" class="social-image-nav"></a>
-            <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="socials-link-block w-inline-block"><img src="images/cib_behance.svg" loading="lazy" alt="" class="social-image-nav"></a>
+            <a href="https://medium.com/@artlee06" target="_blank" class="socials-link-block w-inline-block"><img src="images/bi_medium.svg" loading="lazy" alt="" class="social-image-nav"></a>
             <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="socials-link-block w-inline-block"><img src="images/cib_instagram.svg" loading="lazy" alt="" class="social-image-nav"></a>
           </div>
         </div>
@@ -105,14 +113,17 @@
   <div class="about-section wf-section">
     <div class="spacer-52-24-16"></div>
     <div class="horizontal-padded-container">
-      <div class="w-layout-grid _2-col-grid-about"><img class="image-12" src="images/aboutimage.png" alt="" style="opacity:0" sizes="(max-width: 767px) 90vw, 100vw" data-w-id="5f06600c-ab3c-8e60-2c0c-2630ceffa15e" id="w-node-_5f06600c-ab3c-8e60-2c0c-2630ceffa15e-ed0b65bf" loading="lazy" srcset="images/aboutimage-p-500.png 500w, images/aboutimage-p-800.png 800w, images/aboutimage.png 1184w">
+      <div class="w-layout-grid _2-col-grid-about">
+        <div id="w-node-_5d7cb124-5200-3361-483b-e07e5ae0a08e-ed0b65bf" data-w-id="5d7cb124-5200-3361-483b-e07e5ae0a08e" class="image-shadow"><img src="images/aboutimage.png" loading="lazy" data-w-id="5f06600c-ab3c-8e60-2c0c-2630ceffa15e" id="w-node-_5f06600c-ab3c-8e60-2c0c-2630ceffa15e-ed0b65bf" srcset="images/aboutimage-p-500.png 500w, images/aboutimage-p-800.png 800w, images/aboutimage.png 1184w" sizes="(max-width: 991px) 90vw, 100vw" alt="" class="image-12">
+          <div class="brutalist-image-shadow"></div>
+        </div>
         <div id="w-node-f497405e-78f3-1b33-5d14-caa84189fc69-ed0b65bf" data-w-id="f497405e-78f3-1b33-5d14-caa84189fc69" class="about-content">
           <h2 class="heading-7">Yeap that&#x27;s me, Arthur 🙌</h2>
-          <p>I am a product designer based in Singapore. I value empathy and enjoy just making things that I can be proud of. <br><br>My background in CS and SWE allows me to act as a <strong>bridge between</strong> <span class="blue-bold-span">devs</span> and <span class="orange-bold-span">designers</span>. This means I ensure designs are <span class="blue-bold-span">feasible to implement</span> on top of <span class="orange-bold-span">being usable</span>. This also means I am better able to empathise with devs by having a <strong>mental model</strong> of how things might work. <br><br>In my free time, I enjoy bouldering, drinking hojicha latté (yes I know, I’m basic) and playing Breath of the Wild on Nintendo Switch.</p>
+          <p>I am a product designer based in Singapore. I value empathy and enjoy just making things that I can be proud of. <br><br>My background in CS and SWE allows me to act as a <strong>bridge between</strong> <span class="blue-bold-span">devs</span> and <span class="orange-bold-span">designers</span>. This means I ensure designs are <span class="blue-bold-span">feasible to implement</span> on top of <span class="orange-bold-span">being usable</span>. This also means I am better able to empathise with devs by having a <strong>mental model</strong> of how things might work. <br><br>In my free time, I enjoy bouldering, drinking hojicha latté (yes I know, I’m basic) and playing Tears of the Kingdom on Nintendo Switch.</p>
         </div>
       </div>
     </div>
-    <div class="spacer-52-24-16"></div>
+    <div class="spacer-80-60-24-16"></div>
     <div class="edu-exp-skills">
       <div data-w-id="f8f8a0d5-ac2d-e3bc-4d1d-7045c026ad7d" style="opacity:0" class="edu">
         <h6 class="heading-8">Education</h6>
@@ -121,8 +132,8 @@
       <div data-w-id="d45ddcda-2130-a620-596f-f5a6404daad5" style="opacity:0" class="exp">
         <h6 class="heading-8">Experience</h6>
         <div class="div-block-9">
-          <p class="paragraph-8"><strong>Indeed</strong><br>· June 2022 - Mar 2023 · Associate UX Designer<br><br><strong>Indeed</strong><br>· May 2021 - Jul 2021 · Associate UX Designer Intern<br><br><strong>Govtech</strong><br>· Dec 2020 - Feb 2021 · UX Research Intern</p>
-          <p class="paragraph-9"><strong>StaffAny</strong><br>· May 2020 - Oct 2020 · Software Engineer Intern<br><br><strong>NodeFlair</strong><br>· Sep 2019 - Mar 2020 · Software Engineer Intern</p>
+          <p class="paragraph-8"><strong>IBM iX</strong><br>· May 2023 - Present · Associate designer<br>‍<br><strong>Indeed</strong><br>· June 2022 - Mar 2023 · Associate UX Designer<br><br><strong>Indeed</strong><br>· May 2021 - Jul 2021 · Associate UX Designer Intern<br></p>
+          <p class="paragraph-9"><strong>‍</strong><strong>Govtech</strong><br>· Dec 2020 - Feb 2021 · UX Research Intern<br><br><strong>StaffAny</strong><br>· May 2020 - Oct 2020 · Software Engineer Intern<br><br><strong>NodeFlair</strong><br>· Sep 2019 - Mar 2020 · Software Engineer Intern</p>
         </div>
       </div>
       <div data-w-id="7a9a6da1-5fd5-b24e-4751-d0a2fed0739e" style="opacity:0" class="skills">
@@ -147,11 +158,11 @@
         </div>
         <div class="spacer-32"></div>
         <div class="footer-div">
-          <h2 class="footer-heading"><span class="get-in-touch">Get in touch!</span></h2>
+          <h2 class="footer-heading"><span class="get-in-touch">Find me online</span></h2>
           <div class="footer-nav-socials">
             <a href="mailto:ykarthurlee@gmail.com" class="w-inline-block"><img src="images/ci_mail.svg" loading="lazy" alt=""></a>
             <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="w-inline-block"><img src="images/cib_linkedin.svg" loading="lazy" alt=""></a>
-            <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="w-inline-block"><img src="images/cib_behance.svg" loading="lazy" alt="" class="icons"></a>
+            <a href="https://medium.com/@artlee06" target="_blank" class="w-inline-block"><img src="images/bi_medium.svg" loading="lazy" alt="" class="icons"></a>
             <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="w-inline-block"><img src="images/cib_instagram.svg" loading="lazy" alt=""></a>
           </div>
         </div>
@@ -161,6 +172,5 @@
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6294d286c1ff6311cc06fdda" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
