--- a/work/side-projects.html
+++ b/work/side-projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 31 2023 04:30:04 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 23 2023 13:14:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629f7a9d51b09f7151f1312e" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -14,15 +14,12 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular","Space Grotesk:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <!-- <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.png" rel="apple-touch-icon"> -->
-  <link rel="icon" type=" image/svg+xml" href="images/favicon.svg">
-  <link rel="icon" type=" image/png" href="images/favicon.png">
+  <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
-<body>
+<body class="body-5">
   <div data-w-id="7af02fde-3631-a900-1e61-bf5c9681d2dc" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="desktop-nav">
       <div class="horizontal-padded-container">
@@ -48,7 +45,7 @@
         <div class="nav-socials">
           <a href="mailto:ykarthurlee@gmail.com" class="social-link w-inline-block"><img src="../images/ci_mail.svg" loading="lazy" alt=""></a>
           <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="social-link w-inline-block"><img src="../images/cib_linkedin.svg" loading="lazy" alt=""></a>
-          <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="social-link w-inline-block"><img src="../images/cib_behance.svg" loading="lazy" alt="" class="icons"></a>
+          <a href="https://medium.com/@artlee06" target="_blank" class="social-link w-inline-block"><img src="../images/bi_medium.svg" loading="lazy" alt="" class="icons"></a>
           <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="social-link w-inline-block"><img src="../images/cib_instagram.svg" loading="lazy" alt=""></a>
         </div>
       </div>
@@ -63,30 +60,41 @@
         </div>
       </div>
       <div class="full-screen-nav">
-        <a href="../index.html" class="mobile-brand w-nav-brand"><img src="../images/SmallLogo.svg" loading="lazy" alt="" class="image-3">
-          <div class="wordmark">
-            <div class="name-wordmark">Arthur Lee</div>
-            <div class="pd-wordmark">Product designer<span class="text-span-3">;</span></div>
-          </div>
-        </a>
-        <div class="mob-nav-menu-items">
-          <div class="menu-section">
-            <div class="nav-divider">
-              <div>Menu</div>
-              <div class="sideline"></div>
+        <div class="logo-menu-container">
+          <a href="../index.html" class="mobile-brand w-nav-brand"><img src="../images/SmallLogo.svg" loading="lazy" alt="" class="image-3">
+            <div class="wordmark">
+              <div class="name-wordmark">Arthur Lee</div>
+              <div class="pd-wordmark">Product designer<span class="text-span-3">;</span></div>
             </div>
-            <a href="../index.html" class="nav-link w-nav-link">Home</a>
-            <a href="../about.html" class="nav-link w-nav-link">About</a>
-            <a href="https://drive.google.com/file/d/1AbukktH38L2ny-aaEPySJ4uAO_CFpUIl/view?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
-          </div>
-          <div class="work-section">
-            <div class="nav-divider">
-              <div>Work</div>
-              <div class="sideline"></div>
+          </a>
+          <div class="mob-nav-menu-items">
+            <div class="menu-section">
+              <h1 class="menu-header">Menu</h1>
+              <div class="nav-divider">
+                <div>Menu</div>
+                <div class="sideline"></div>
+              </div>
+              <div class="indent-menu-container">
+                <a href="../index.html" class="nav-link w-nav-link">Home</a>
+                <a href="../about.html" class="nav-link w-nav-link">About</a>
+                <a href="https://drive.google.com/file/d/1AbukktH38L2ny-aaEPySJ4uAO_CFpUIl/view?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
+              </div>
+              <div data-w-id="e8880fb5-13c9-b4eb-2209-21344e713299" class="work-nav-link">
+                <div>Work</div><img src="../images/radix-icons_triangle-down.svg" loading="lazy" alt="" class="image-19">
+              </div>
             </div>
-            <a href="../work/ux.html" class="nav-link w-nav-link">UX</a>
-            <a href="../work/swe.html" class="nav-link w-nav-link">SWE</a>
-            <a href="../work/side-projects.html" aria-current="page" class="nav-link w-nav-link w--current">Visual design</a>
+            <div class="work-section">
+              <div class="nav-divider">
+                <div>Work</div>
+                <div class="sideline"></div>
+              </div>
+              <h1 class="menu-header">Work</h1>
+              <div class="indent-menu-container">
+                <a href="../work/ux.html" class="nav-link w-nav-link">UX</a>
+                <a href="../work/swe.html" class="nav-link w-nav-link">SWE</a>
+                <a href="../work/side-projects.html" aria-current="page" class="nav-link w-nav-link w--current">Visual design</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="get-in-touch-nav">
@@ -94,7 +102,7 @@
           <div class="mob-nav-socials">
             <a href="mailto:ykarthurlee@gmail.com" class="socials-link-block w-inline-block"><img src="../images/ci_mail.svg" loading="lazy" alt="" class="social-image-nav"></a>
             <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="socials-link-block w-inline-block"><img src="../images/cib_linkedin.svg" loading="lazy" alt="" class="social-image-nav"></a>
-            <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="socials-link-block w-inline-block"><img src="../images/cib_behance.svg" loading="lazy" alt="" class="social-image-nav"></a>
+            <a href="https://medium.com/@artlee06" target="_blank" class="socials-link-block w-inline-block"><img src="../images/bi_medium.svg" loading="lazy" alt="" class="social-image-nav"></a>
             <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="socials-link-block w-inline-block"><img src="../images/cib_instagram.svg" loading="lazy" alt="" class="social-image-nav"></a>
           </div>
         </div>
@@ -115,6 +123,7 @@
     </div>
     <div class="spacer-40-24"></div>
     <div class="check-out-work">
+      <div class="lottie-animation-2" data-w-id="758b41a1-6fee-6901-5cca-76159a2b0e51" data-animation-type="lottie" data-src="../documents/lf30_editor_nojpjd8i.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
       <div>Check out my side projects below</div>
       <div class="lottie-animation-2" data-w-id="5da096bb-8127-10cc-f73f-df0a228f4286" data-animation-type="lottie" data-src="../documents/lf30_editor_nojpjd8i.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
     </div>
@@ -130,47 +139,56 @@
       <div class="card-container w-container">
         <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="../work/daily-ui-challenges.html" target="_blank" class="image-with-card w-inline-block">
           <div class="overlay-container">
-            <div class="color-overlay"></div><img src="../images/daily-ui-thumbnail-4-3.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/daily-ui-thumbnail-4-3-p-500.png 500w, ../images/daily-ui-thumbnail-4-3-p-800.png 800w, ../images/daily-ui-thumbnail-4-3-p-1080.png 1080w, ../images/daily-ui-thumbnail-4-3.png 1280w" class="image-card-left">
+            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="../images/daily-ui-thumbnail-4-3.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/daily-ui-thumbnail-4-3-p-500.png 500w, ../images/daily-ui-thumbnail-4-3-p-800.png 800w, ../images/daily-ui-thumbnail-4-3-p-1080.png 1080w, ../images/daily-ui-thumbnail-4-3.png 1280w" class="image-card-left">
           </div>
-          <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
-            <div class="div-block-2">
-              <h5 class="heading-3">Daily UI Challenges</h5>
-              <p class="paragraph">A set of 5 UI challenges to work on my UI design skills.</p>
+          <div class="link-block-shadow">
+            <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
+              <div class="div-block-2">
+                <h5 class="heading-3">Daily UI Challenges</h5>
+                <p class="paragraph">A set of 5 UI challenges to work on my UI design skills.</p>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">VIEW WORK</div>
+                <div class="link-right-arrow">-&gt;</div>
+              </div>
             </div>
-            <div class="resume-div">
-              <div class="link-caption">VIEW WORK</div>
-              <div class="link-right-arrow">-&gt;</div>
-            </div>
+            <div class="brutalist-shadow-work-right-card"></div>
           </div>
         </a>
         <a data-w-id="c3bf3a6f-77a7-f45a-c1da-c7c7706c174a" href="../work/personal-branding.html" target="_blank" class="image-with-card-left div-block-5 pd-top-border w-inline-block">
+          <div class="link-block-shadow-left">
+            <div data-w-id="c3bf3a6f-77a7-f45a-c1da-c7c7706c174c" class="link-block-left pd-outline">
+              <div class="div-block-2">
+                <h5 class="heading-3">Personal Branding</h5>
+                <p class="paragraph">A look into my personal branding and what it means.</p>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">VIEW WORK</div>
+                <div class="link-right-arrow">-&gt;</div>
+              </div>
+            </div>
+            <div class="brutalist-shadow-work-left-card"></div>
+          </div>
           <div class="overlay-container-right">
             <div class="color-overlay"></div><img loading="lazy" height="480" src="../images/personal-branding-thumbnail-4-3.png" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/personal-branding-thumbnail-4-3-p-500.png 500w, ../images/personal-branding-thumbnail-4-3-p-800.png 800w, ../images/personal-branding-thumbnail-4-3.png 1280w" class="image-card-right">
-          </div>
-          <div data-w-id="c3bf3a6f-77a7-f45a-c1da-c7c7706c174c" class="link-block-left pd-outline">
-            <div class="div-block-2">
-              <h5 class="heading-3">Personal Branding</h5>
-              <p class="paragraph">A look into my personal branding and what it means.</p>
-            </div>
-            <div class="resume-div">
-              <div class="link-caption">VIEW WORK</div>
-              <div class="link-right-arrow">-&gt;</div>
-            </div>
           </div>
         </a>
         <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="../work/misc-design-projects.html" target="_blank" class="image-with-card w-inline-block">
           <div class="overlay-container">
-            <div class="color-overlay"></div><img src="../images/Misc-design-projs-thumbnail-4-3-smaller.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/Misc-design-projs-thumbnail-4-3-smaller-p-500.png 500w, ../images/Misc-design-projs-thumbnail-4-3-smaller-p-800.png 800w, ../images/Misc-design-projs-thumbnail-4-3-smaller.png 1280w" class="image-card-left">
+            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="../images/Misc-design-projs-thumbnail-4-3-smaller.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/Misc-design-projs-thumbnail-4-3-smaller-p-500.png 500w, ../images/Misc-design-projs-thumbnail-4-3-smaller-p-800.png 800w, ../images/Misc-design-projs-thumbnail-4-3-smaller.png 1280w" class="image-card-left">
           </div>
-          <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
-            <div class="div-block-2">
-              <h5 class="heading-3">Misc design projects</h5>
-              <p class="paragraph">Small projects worked on in my free time.</p>
+          <div class="link-block-shadow">
+            <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
+              <div class="div-block-2">
+                <h5 class="heading-3">Misc design projects</h5>
+                <p class="paragraph">Small projects worked on in my free time.</p>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">VIEW WORK</div>
+                <div class="link-right-arrow">-&gt;</div>
+              </div>
             </div>
-            <div class="resume-div">
-              <div class="link-caption">VIEW WORK</div>
-              <div class="link-right-arrow">-&gt;</div>
-            </div>
+            <div class="brutalist-shadow-work-right-card"></div>
           </div>
         </a>
       </div>
@@ -190,11 +208,11 @@
         </div>
         <div class="spacer-32"></div>
         <div class="footer-div">
-          <h2 class="footer-heading"><span class="get-in-touch">Get in touch!</span></h2>
+          <h2 class="footer-heading"><span class="get-in-touch">Find me online</span></h2>
           <div class="footer-nav-socials">
             <a href="mailto:ykarthurlee@gmail.com" class="w-inline-block"><img src="../images/ci_mail.svg" loading="lazy" alt=""></a>
             <a href="https://www.linkedin.com/in/arthur-lee-ying-kiu/" target="_blank" class="w-inline-block"><img src="../images/cib_linkedin.svg" loading="lazy" alt=""></a>
-            <a href="https://www.behance.net/ArthurLeeYingKiu" target="_blank" class="w-inline-block"><img src="../images/cib_behance.svg" loading="lazy" alt="" class="icons"></a>
+            <a href="https://medium.com/@artlee06" target="_blank" class="w-inline-block"><img src="../images/bi_medium.svg" loading="lazy" alt="" class="icons"></a>
             <a href="https://www.instagram.com/artlee_designs/?hl=en" target="_blank" class="w-inline-block"><img src="../images/cib_instagram.svg" loading="lazy" alt=""></a>
           </div>
         </div>
@@ -204,6 +222,5 @@
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6294d286c1ff6311cc06fdda" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 </html>
